# Dosochka

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  docker-compose.yml
apps/: CMakeLists.txt
apps/client-qt/: CMakeLists.txt
apps/client-qt/src/: main.cpp
apps/client-qt/src/network/: client_json.cpp  client_json.hpp  server_connection.cpp  server_connection.hpp
apps/client-qt/src/session/: board_operation_builder.cpp  board_operation_builder.hpp  board_session_state.cpp  board_session_state.hpp  client_session_controller.cpp  client_session_controller.hpp  client_session_controller_connection.cpp  client_session_controller_messages.cpp
apps/client-qt/src/ui/: board_canvas_scene_growth.cpp  board_canvas_scene_growth.hpp  board_canvas_snapshot_renderer.cpp  board_canvas_snapshot_renderer.hpp  board_canvas_widget.cpp  board_canvas_widget.hpp  board_participants_view.cpp  board_participants_view.hpp  board_tool_panel.cpp  board_tool_panel.hpp  board_top_bar.cpp  board_top_bar.hpp  main_window.cpp  main_window.hpp  main_window_network.cpp  main_window_pages.cpp  main_window_shared.hpp  main_window_state.cpp  main_window_styles.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
apps/server/src/core/: board_access_coordinator.cpp  board_access_coordinator.hpp  security_primitives.hpp  server_state.cpp  server_state.hpp
apps/server/src/protocol/: json_common.cpp  json_common.hpp  json_helpers.hpp  json_parsing.cpp  json_parsing.hpp  json_serialization.cpp  json_serialization.hpp
apps/server/src/session/: client_session.cpp  client_session.hpp  client_session_auth.cpp  client_session_board.cpp  client_session_dispatch.cpp  client_session_io.cpp
apps/server/src/transport/: json_tcp_server.cpp  json_tcp_server.hpp
libs/: CMakeLists.txt
libs/application/: CMakeLists.txt
libs/application/include/online_board/application/: dto.hpp  repository_interfaces.hpp  security_interfaces.hpp
libs/application/include/online_board/application/dto/: auth_dto.hpp  board_dto.hpp  operation_dto.hpp
libs/application/include/online_board/application/repositories/: board_repository.hpp  session_repository.hpp  user_repository.hpp
libs/application/include/online_board/application/services/: auth_service.hpp  board_access_service.hpp  board_service.hpp  board_state_service.hpp  operation_service.hpp  presence_service.hpp
libs/application/src/: auth_service.cpp  board_service.cpp  board_state_detail.cpp  board_state_detail.hpp  board_state_object_ops.cpp  board_state_service.cpp  board_state_shape_ops.cpp  board_state_stroke_ops.cpp  board_state_text_ops.cpp
libs/common/: CMakeLists.txt
libs/common/include/online_board/common/: clock.hpp  error.hpp  ids.hpp  result.hpp
libs/domain/: CMakeLists.txt
libs/domain/include/online_board/domain/auth/: principal.hpp  session.hpp  user.hpp
libs/domain/include/online_board/domain/board/: board.hpp  board_member.hpp  board_object.hpp  board_participant.hpp  board_snapshot.hpp
libs/domain/include/online_board/domain/core/: enums.hpp  value_types.hpp
libs/domain/include/online_board/domain/operations/: applied_operation.hpp  operation_command.hpp
libs/persistence/: CMakeLists.txt
libs/persistence/include/online_board/persistence/: in_memory_repositories.hpp  postgres_repositories.hpp
libs/persistence/include/online_board/persistence/in_memory/: in_memory_board_lifecycle_persistence.hpp  in_memory_board_member_repository.hpp  in_memory_board_object_repository.hpp  in_memory_board_operation_repository.hpp  in_memory_board_repository.hpp  in_memory_board_runtime_persistence.hpp  in_memory_session_repository.hpp  in_memory_storage.hpp  in_memory_user_repository.hpp
libs/persistence/include/online_board/persistence/postgres/: postgres_board_lifecycle_persistence.hpp  postgres_board_member_repository.hpp  postgres_board_object_repository.hpp  postgres_board_operation_repository.hpp  postgres_board_repository.hpp  postgres_board_runtime_persistence.hpp  postgres_connection.hpp  postgres_json.hpp  postgres_session_repository.hpp  postgres_user_repository.hpp
libs/persistence/src/postgres/: postgres_board_lifecycle_persistence.cpp  postgres_board_member_repository.cpp  postgres_board_object_repository.cpp  postgres_board_operation_repository.cpp  postgres_board_repository.cpp  postgres_board_runtime_persistence.cpp  postgres_connection.cpp  postgres_json.cpp  postgres_repository_utils.hpp  postgres_session_repository.cpp  postgres_user_repository.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/include/online_board/protocol/: message_types.hpp
libs/runtime/: CMakeLists.txt
libs/runtime/include/online_board/runtime/: board_registry.hpp  board_runtime_manager.hpp
libs/runtime/src/: board_registry.cpp  board_runtime_manager.cpp
sql/: 000_pg_hba.sh  001_init.sql
tests/: CMakeLists.txt
tests/auth/: auth_service_tests.cpp
tests/board/: board_access_service_tests.cpp  board_service_join_tests.cpp  board_service_lifecycle_tests.cpp  board_service_membership_tests.cpp  board_service_settings_tests.cpp  board_state_shape_tests.cpp  board_state_stroke_tests.cpp  board_state_text_tests.cpp
tests/client/: board_session_state_qt_tests.cpp
tests/operations/: operation_service_tests.cpp
tests/runtime/: board_runtime_manager_tests.cpp  compile_smoke.cpp
tests/server/: server_integration_tests.cpp
tests/support/: test_support.hpp
